force-app/main/default/objects/Feedback__c/Feedback__c.object-meta.xml
<CustomObject>
  <label>Feedback</label>
  <pluralLabel>Feedback</pluralLabel>
  <nameField>
    <type>AutoNumber</type>
    <label>Feedback Number</label>
    <displayFormat>FB-{00000}</displayFormat>
  </nameField>
  <sharingModel>Private</sharingModel>
</CustomObject>