force-app/main/default/objects/Feedback__c/fields/Attendee__c.field-meta.xml
<CustomField>
  <fullName>Attendee__c</fullName>
  <label>Attendee</label>
  <type>Lookup</type>
  <referenceTo>Attendee__c</referenceTo>
  <relationshipName>Feedback_Given</relationshipName>
  <deleteConstraint>SetNull</deleteConstraint>
</CustomField>