force-app/main/default/objects/Feedback__c/fields/Event__c.field-meta.xml
<CustomField>
  <fullName>Event__c</fullName>
  <label>Event</label>
  <type>Lookup</type>
  <referenceTo>Event__c</referenceTo>
  <relationshipName>Feedbacks</relationshipName>
  <deleteConstraint>Restrict</deleteConstraint>
  <required>true</required>
</CustomField>