force-app/main/default/objects/Feedback__c/fields/Feedback_Date__c.field-meta.xml
<CustomField>
  <fullName>Feedback_Date__c</fullName>
  <label>Feedback Date</label>
  <type>DateTime</type>
  <defaultValue>NOW()</defaultValue>
</CustomField>