force-app/main/default/objects/Feedback__c/fields/Rating__c.field-meta.xml
<CustomField>
  <fullName>Rating__c</fullName>
  <label>Rating</label>
  <precision>2</precision>
  <scale>0</scale>
  <type>Number</type>
</CustomField>